--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -14,6 +14,7 @@
     "scss/at-extend-no-missing-placeholder": null,
     "alpha-value-notation": null,
     "color-function-notation": null,
+    "max-line-length": null,
     "at-rule-no-unknown":[true,{
             "ignoreAtRules":["function","if","for","each","include","mixin","content", "return", "extend"]
         }]
