--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "chokidar": "^3.5.3",
     "cross-env": "^7.0.3",
     "css-declaration-sorter": "^6.1.3",
+    "css-loader": "^6.7.1",
     "cssnano": "^5.0.9",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
@@ -83,6 +84,7 @@
     "pug": "^3.0.2",
     "pug-lint": "^2.6.0",
     "puglint-stylish": "^1.1.0",
+    "style-loader": "^3.3.1",
     "stylelint": "^14.11.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recommended-scss": "^5.0.0",
@@ -98,6 +100,7 @@
     "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
-    "gsap": "^3.8.0"
+    "gsap": "^3.8.0",
+    "swiper": "^8.3.2"
   }
 }
